<resources>
    <string name="app_name">exemploCardView</string>
    <string name="card_title">Cintos de Segurança</string>
    <string name="card_question">Os pneus de seu caminhão estão adequadamente calibrados e em bom estado?</string>
    <string name="card_remarks">O cinto de segurança do lado do passageiro não está prendendo.</string>
    <string name="card_remarks_counter">0/130</string>
    <string name="card_remarks_counter_text">%d/130</string>
    <string name="card_remarks_counter_max">%s/130</string>
    <string name="card_header">Header or Title</string>
    <string name="card_image_header_icon">card_image_header</string>
    <string name="unlike_button_description">Unlike button</string>
    <string name="like_button_description">Like button</string>

</resources>
