<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_expansive_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/questionnaire_question_card_background"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/size_12"
        app:cardElevation="@dimen/size_6"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_16"
                    android:layout_marginTop="@dimen/size_8"
                    android:layout_marginBottom="@dimen/size_8"
                    android:autofillHints="@string/card_header"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="@dimen/size_8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/card_header" />

                <ImageView
                    android:id="@+id/icon_image_header"
                    android:layout_width="@dimen/size_28"
                    android:layout_height="@dimen/size_28"
                    android:layout_marginTop="@dimen/size_4"
                    android:layout_marginEnd="@dimen/size_24"
                    android:layout_marginBottom="@dimen/size_4"
                    android:contentDescription="@string/card_image_header_icon"
                    android:src="@drawable/ic_thumbs_up_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/arrow_image_header"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/arrow_image_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_16"
                    android:contentDescription="@null"
                    android:rotation="270"
                    android:src="@drawable/ic_small_arrow_down"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_image_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/icon_image_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_body"
                app:layout_constraintTop_toBottomOf="@+id/layout_header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="@dimen/size_8">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_body_question"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:layout_marginStart="@dimen/size_12"
                    android:layout_marginEnd="@dimen/size_12"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_question"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_40"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="@dimen/font_size_4"
                        android:textColor="@color/greyish_brown"
                        android:textSize="@dimen/font_size_14"
                        android:textStyle="normal"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/card_question"
                        tools:visibility="visible"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_body_icons"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:layout_marginStart="@dimen/size_12"
                    android:layout_marginTop="@dimen/size_6"
                    android:layout_marginEnd="@dimen/size_6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_body_question">

                    <ImageButton
                        android:id="@+id/like_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_40"
                        android:layout_marginEnd="@dimen/size_4"
                        android:layout_weight="0.5"
                        android:background="@drawable/background_btn"
                        android:contentDescription="@string/like_button_description"
                        android:src="@drawable/ic_thumbs_up_icon"
                        android:textColor="@android:color/holo_orange_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/unlike_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/unlike_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_40"
                        android:layout_marginStart="@dimen/size_4"
                        android:layout_weight="0.5"
                        android:background="@drawable/background_btn"
                        android:contentDescription="@string/unlike_button_description"
                        android:src="@drawable/ic_thumbs_down_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/like_button"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_body_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_80"
                    android:layout_marginStart="@dimen/size_12"
                    android:layout_marginTop="@dimen/size_8"
                    android:layout_marginEnd="@dimen/size_12"
                    android:layout_marginBottom="@dimen/size_20"
                    android:background="@drawable/background_edt"
                    android:padding="@dimen/size_4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_body_icons">

                    <EditText
                        android:id="@+id/text_remarks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/card_remarks"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:hint="@string/card_remarks"
                        android:inputType="text"
                        android:lineSpacingExtra="@dimen/font_size_4"
                        android:lines="3"
                        android:maxLength="130"
                        android:maxLines="3"
                        android:minLines="1"
                        android:textColor="@color/greyish_brown"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/font_size_14"
                        android:textStyle="normal"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/card_remarks"/>

                    <TextView
                        android:id="@+id/text_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/size_6"
                        android:layout_marginBottom="@dimen/size_6"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="@dimen/font_size_4"
                        android:text="@string/card_remarks_counter"
                        android:textColor="@color/greyish_brown"
                        android:textSize="@dimen/font_size_12"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="@string/card_remarks_counter"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>