<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_expansive_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundCard"
        app:cardCornerRadius="@dimen/size_12"
        app:cardElevation="@dimen/size_6"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/size_8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="@dimen/size_8"
                android:paddingEnd="@dimen/size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_8"
                    android:layout_marginTop="@dimen/size_8"
                    android:layout_marginBottom="@dimen/size_8"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="@dimen/size_8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/card_title" />

                <ImageView
                    android:id="@+id/icon_image_header"
                    android:layout_width="@dimen/size_28"
                    android:layout_height="@dimen/size_28"
                    android:layout_marginTop="@dimen/size_4"
                    android:layout_marginEnd="@dimen/size_24"
                    android:layout_marginBottom="@dimen/size_4"
                    android:src="@drawable/ic_thumbs_up_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/arrow_image_header"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/arrow_image_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:rotation="270"
                    android:src="@drawable/ic_small_arrow_down"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_image_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/icon_image_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingLeft="@dimen/size_16"
                android:paddingRight="@dimen/size_16">

                <LinearLayout
                    android:id="@+id/layout_body_blocks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_body_block1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_8"
                        android:layout_marginBottom="@dimen/size_12"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/text_question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:lineSpacingExtra="@dimen/font_size_4"
                            android:textColor="@color/greyish_brown"
                            android:textSize="@dimen/font_size_14"
                            android:textStyle="normal"
                            tools:text="@string/card_question" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_body_block2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/unlike_button"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/size_40"
                            android:layout_marginEnd="@dimen/size_4"
                            android:layout_weight="0.5"
                            android:background="@drawable/background_btn"
                            android:src="@drawable/ic_thumbs_down_icon" />

                        <ImageButton
                            android:id="@+id/like_button"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/size_40"
                            android:layout_marginStart="@dimen/size_4"
                            android:layout_weight="0.5"
                            android:background="@drawable/background_btn"
                            android:src="@drawable/ic_thumbs_up_icon"
                            android:textColor="@android:color/holo_orange_dark" />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_body_block3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_80"
                        android:layout_marginTop="@dimen/size_4"
                        android:layout_marginBottom="@dimen/size_4"
                        android:background="@drawable/background_edt"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/size_4"
                        android:paddingRight="@dimen/size_4"
                        android:paddingBottom="@dimen/size_4">

                        <EditText
                            android:id="@+id/text_remarks"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/transparent"
                            android:textCursorDrawable="@null"
                            android:gravity="start"
                            android:lineSpacingExtra="@dimen/font_size_4"
                            android:maxLength="130"
                            android:maxLines="3"
                            android:minLines="1"
                            android:lines="3"
                            android:paddingTop="@dimen/size_4"
                            android:paddingBottom="@dimen/size_4"
                            android:textColor="@color/greyish_brown"
                            android:textSize="@dimen/font_size_14"
                            android:textStyle="normal"
                            android:visibility="visible"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:text="@string/card_remarks"/>

                        <TextView
                            android:id="@+id/text_counter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:lineSpacingExtra="@dimen/font_size_4"
                            android:textColor="@color/greyish_brown"
                            android:textSize="@dimen/font_size_12"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:text="@string/card_remarks_counter"
                            tools:text="@string/card_remarks_counter"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>